# benchmark-on-python-web-framework

./: LICENSE  README.md
database/: create_data.py  demo.sql
django_code/: manage.py  pyproject.toml  requirements.txt
django_code/config/: config.py
django_code/demo/: models.py  urls.py  views.py
django_code/demo/migrations/: 0001_initial.py  0002_alter_demodata_create_time_and_more.py
django_code/django_code/: asgi.py  settings.py  urls.py  wsgi.py
django_code/script/: Dockerfile
fastapi_code/: app.py  requirements.txt
fastapi_code/script/: Dockerfile
flask_code/: app.py  requirements.txt
flask_code/config/: config.py
flask_code/script/: Dockerfile
kubernetes/: django-demployment.yml  django-deployment.yml  fastapi-deployment.yml  flask-deployment.yml
kubernetes/framework-benchmark/: configmap-config.yaml  file-config.yaml  master-deployment.yaml  master-ingress.yaml  master-service.yaml  worker-deployment.yaml
kubernetes/workload/: django-deployment.yml  fastapi-deployment.yml  flask-deployment.yml  starlette-deployment.yml
starlette_code/: app.py  requirements.txt
starlette_code/script/: Dockerfile
test_script/: django.jmx  fastapi.jmx  flask-code.jmx
