[tool.poetry]
name = "django_code"
version = "0.1.0"
description = ""
authors = ["Manjusaka <me@manjusaka.me>"]

[tool.poetry.dependencies]
python = ">3.8"
django = ">3.0.6"
greenify = ">0.3.2"
mysqlclient = ">1.4.6"
gevent = ">20.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
